<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="hcmute.edu.vn.teeticktick.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/SecondFragment"
        android:name="hcmute.edu.vn.teeticktick.SecondFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/TimelineFragment"
        android:name="hcmute.edu.vn.teeticktick.TimelineFragment"
        android:label="@string/nav_timeline"
        tools:layout="@layout/fragment_timeline" />
    
    <fragment
        android:id="@+id/TaskDetailFragment"
        android:name="hcmute.edu.vn.teeticktick.TaskDetailFragment"
        android:label="Chi tiết nhiệm vụ"
        tools:layout="@layout/fragment_task_detail" />
    
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="hcmute.edu.vn.teeticktick.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>